# TP_C_TASK2

./: CMakeLists.txt  README.md  codecov.yml  cppcheck_report.txt  expected.txt  workers.txt  workers_BIG.txt
.github/workflows/: cmake.yml
include/: collect_data.h  find_average_salary.h  find_average_salary_par.h  sort_data.h  utils.h
src/: collect_data.c  find_average_salary.c  find_average_salary_par.c  main.c  sort_data.c  utils.c
test/: CMakeLists.txt  stress_test_multiT.cpp  stress_test_oneT.cpp  test1.cpp  test2.cpp  test3.cpp  test4_parallel.cpp  test_general.cpp  test_general_for_multiT.cpp  test_general_for_oneT.cpp  test_last_equal_methods.cpp
